# Citadelle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.bat  build_and_test.sh
include/: key_exchange.h
src/: key_exchange.cpp  main.cpp
tests/: integration_test.cpp  key_exchange_test.cpp  security_test.cpp
